--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "3.4.1",
     "wow.js": "^1.2.2"
   },
+  "homepage" : "https://aikoipa.github.io/ai/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
